k8s/api/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: tic-tac-toe
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        app.kubernetes.io/part-of: tic-tac-toe
    spec:
      containers:
        - name: api
          image: tic-tac-toe-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20
