k8s/api/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: tic-tac-toe
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
