k8s/api/api_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: tic-tac-toe
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tic-tac-toe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5000
